force-app/main/default/objects/Calendar_Period__c/Calendar_Period__c.object-meta.xml
<CustomObject>
    <description>Create a calendar period during which program activities take place.</description>
    <label>Calendar Period</label>
    <nameField>
        <label>Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>