force-app/main/default/objects/Calendar_Period__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The last date of the the calendar period.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>