force-app/main/default/objects/Calendar_Period__c/fields/Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Period_Type__c</fullName>
    <label>Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar Year</fullName>
            </value>
            <value>
                <fullName>Fiscal Year</fullName>
            </value>
            <value>
                <fullName>Calendar Quarter</fullName>
            </value>
            <value>
                <fullName>Fiscal Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>