force-app/main/default/objects/Calendar_Period__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The start date of a calendar period.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>